src/main/java/io/otdd/ddl/thrift/grammar/ThriftParser.java
// Generated from Thrift.g4 by ANTLR 4.7
 package io.otdd.ddl.thrift.grammar; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ThriftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, BoolType=12, ByteType=13, I8Type=14, I16Type=15, I32Type=16, 
		I64Type=17, DoubleType=18, EnumType=19, StringType=20, BinaryType=21, 
		StringValue=22, CharValue=23, BoolValue=24, NumberValue=25, DoubleValue=26, 
		BodyType=27, WS=28;
	public static final int
		RULE_response = 0, RULE_body = 1, RULE_mapElement = 2, RULE_mapKey = 3, 
		RULE_setElement = 4, RULE_setKey = 5, RULE_listElement = 6, RULE_listKey = 7, 
		RULE_basicElement = 8, RULE_basicKey = 9, RULE_basicType = 10, RULE_basicValue = 11, 
		RULE_charValue = 12, RULE_stringValue = 13, RULE_boolValue = 14, RULE_numberValue = 15, 
		RULE_doubleValue = 16, RULE_mapValue = 17, RULE_mapValueElement = 18, 
		RULE_setOrListValue = 19, RULE_containerValue = 20, RULE_seq = 21, RULE_boolType = 22, 
		RULE_byteType = 23, RULE_i8Type = 24, RULE_i16Type = 25, RULE_i32Type = 26, 
		RULE_i64Type = 27, RULE_enumType = 28, RULE_doubleType = 29, RULE_stringType = 30, 
		RULE_binaryType = 31, RULE_bodyType = 32, RULE_mapType = 33, RULE_setType = 34, 
		RULE_listType = 35;
	public static final String[] ruleNames = {
		"response", "body", "mapElement", "mapKey", "setElement", "setKey", "listElement", 
		"listKey", "basicElement", "basicKey", "basicType", "basicValue", "charValue", 
		"stringValue", "boolValue", "numberValue", "doubleValue", "mapValue", 
		"mapValueElement", "setOrListValue", "containerValue", "seq", "boolType", 
		"byteType", "i8Type", "i16Type", "i32Type", "i64Type", "enumType", "doubleType", 
		"stringType", "binaryType", "bodyType", "mapType", "setType", "listType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "'{'", "','", "'}'", "'<'", "'>'", "'['", "']'", "'map'", 
		"'set'", "'list'", "'bool'", "'byte'", "'i8'", "'i16'", "'i32'", "'i64'", 
		"'double'", "'enum'", "'string'", "'binary'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"BoolType", "ByteType", "I8Type", "I16Type", "I32Type", "I64Type", "DoubleType", 
		"EnumType", "StringType", "BinaryType", "StringValue", "CharValue", "BoolValue", 
		"NumberValue", "DoubleValue", "BodyType", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Thrift.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ThriftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ResponseContext extends ParserRuleContext {
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public ByteTypeContext byteType() {
			return getRuleContext(ByteTypeContext.class,0);
		}
		public I8TypeContext i8Type() {
			return getRuleContext(I8TypeContext.class,0);
		}
		public I16TypeContext i16Type() {
			return getRuleContext(I16TypeContext.class,0);
		}
		public I32TypeContext i32Type() {
			return getRuleContext(I32TypeContext.class,0);
		}
		public I64TypeContext i64Type() {
			return getRuleContext(I64TypeContext.class,0);
		}
		public EnumTypeContext enumType() {
			return getRuleContext(EnumTypeContext.class,0);
		}
		public DoubleTypeContext doubleType() {
			return getRuleContext(DoubleTypeContext.class,0);
		}
		public StringTypeContext stringType() {
			return getRuleContext(StringTypeContext.class,0);
		}
		public BinaryTypeContext binaryType() {
			return getRuleContext(BinaryTypeContext.class,0);
		}
		public BodyTypeContext bodyType() {
			return getRuleContext(BodyTypeContext.class,0);
		}
		public MapTypeContext mapType() {
			return getRuleContext(MapTypeContext.class,0);
		}
		public ListTypeContext listType() {
			return getRuleContext(ListTypeContext.class,0);
		}
		public SetTypeContext setType() {
			return getRuleContext(SetTypeContext.class,0);
		}
		public BoolValueContext boolValue() {
			return getRuleContext(BoolValueContext.class,0);
		}
		public CharValueContext charValue() {
			return getRuleContext(CharValueContext.class,0);
		}
		public StringValueContext stringValue() {
			return getRuleContext(StringValueContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public DoubleValueContext doubleValue() {
			return getRuleContext(DoubleValueContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public SetOrListValueContext setOrListValue() {
			return getRuleContext(SetOrListValueContext.class,0);
		}
		public MapValueContext mapValue() {
			return getRuleContext(MapValueContext.class,0);
		}
		public ResponseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_response; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterResponse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitResponse(this);
		}
	}

	public final ResponseContext response() throws RecognitionException {
		ResponseContext _localctx = new ResponseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_response);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BoolType:
				{
				setState(72);
				boolType();
				}
				break;
			case ByteType:
				{
				setState(73);
				byteType();
				}
				break;
			case I8Type:
				{
				setState(74);
				i8Type();
				}
				break;
			case I16Type:
				{
				setState(75);
				i16Type();
				}
				break;
			case I32Type:
				{
				setState(76);
				i32Type();
				}
				break;
			case I64Type:
				{
				setState(77);
				i64Type();
				}
				break;
			case EnumType:
				{
				setState(78);
				enumType();
				}
				break;
			case DoubleType:
				{
				setState(79);
				doubleType();
				}
				break;
			case StringType:
				{
				setState(80);
				stringType();
				}
				break;
			case BinaryType:
				{
				setState(81);
				binaryType();
				}
				break;
			case BodyType:
				{
				setState(82);
				bodyType();
				}
				break;
			case T__8:
				{
				setState(83);
				mapType();
				}
				break;
			case T__10:
				{
				setState(84);
				listType();
				}
				break;
			case T__9:
				{
				setState(85);
				setType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(88);
			match(T__0);
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(89);
				boolValue();
				}
				break;
			case 2:
				{
				setState(90);
				charValue();
				}
				break;
			case 3:
				{
				setState(91);
				stringValue();
				}
				break;
			case 4:
				{
				setState(92);
				numberValue();
				}
				break;
			case 5:
				{
				setState(93);
				doubleValue();
				}
				break;
			case 6:
				{
				setState(94);
				body();
				}
				break;
			case 7:
				{
				setState(95);
				setOrListValue();
				}
				break;
			case 8:
				{
				setState(96);
				mapValue();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<BasicElementContext> basicElement() {
			return getRuleContexts(BasicElementContext.class);
		}
		public BasicElementContext basicElement(int i) {
			return getRuleContext(BasicElementContext.class,i);
		}
		public List<MapElementContext> mapElement() {
			return getRuleContexts(MapElementContext.class);
		}
		public MapElementContext mapElement(int i) {
			return getRuleContext(MapElementContext.class,i);
		}
		public List<SetElementContext> setElement() {
			return getRuleContexts(SetElementContext.class);
		}
		public SetElementContext setElement(int i) {
			return getRuleContext(SetElementContext.class,i);
		}
		public List<ListElementContext> listElement() {
			return getRuleContexts(ListElementContext.class);
		}
		public ListElementContext listElement(int i) {
			return getRuleContext(ListElementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__1);
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(100);
				basicElement();
				}
				break;
			case 2:
				{
				setState(101);
				mapElement();
				}
				break;
			case 3:
				{
				setState(102);
				setElement();
				}
				break;
			case 4:
				{
				setState(103);
				listElement();
				}
				break;
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(106);
				match(T__2);
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(107);
					basicElement();
					}
					break;
				case 2:
					{
					setState(108);
					mapElement();
					}
					break;
				case 3:
					{
					setState(109);
					setElement();
					}
					break;
				case 4:
					{
					setState(110);
					listElement();
					}
					break;
				}
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapElementContext extends ParserRuleContext {
		public MapKeyContext mapKey() {
			return getRuleContext(MapKeyContext.class,0);
		}
		public MapValueContext mapValue() {
			return getRuleContext(MapValueContext.class,0);
		}
		public MapElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterMapElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitMapElement(this);
		}
	}

	public final MapElementContext mapElement() throws RecognitionException {
		MapElementContext _localctx = new MapElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mapElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			mapKey();
			setState(121);
			match(T__0);
			setState(122);
			mapValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapKeyContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public MapTypeContext mapType() {
			return getRuleContext(MapTypeContext.class,0);
		}
		public MapKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterMapKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitMapKey(this);
		}
	}

	public final MapKeyContext mapKey() throws RecognitionException {
		MapKeyContext _localctx = new MapKeyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mapKey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			seq();
			setState(125);
			match(T__4);
			setState(126);
			mapType();
			setState(127);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetElementContext extends ParserRuleContext {
		public SetKeyContext setKey() {
			return getRuleContext(SetKeyContext.class,0);
		}
		public SetOrListValueContext setOrListValue() {
			return getRuleContext(SetOrListValueContext.class,0);
		}
		public SetElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterSetElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitSetElement(this);
		}
	}

	public final SetElementContext setElement() throws RecognitionException {
		SetElementContext _localctx = new SetElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_setElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			setKey();
			setState(130);
			match(T__0);
			setState(131);
			setOrListValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetKeyContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public SetTypeContext setType() {
			return getRuleContext(SetTypeContext.class,0);
		}
		public SetKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterSetKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitSetKey(this);
		}
	}

	public final SetKeyContext setKey() throws RecognitionException {
		SetKeyContext _localctx = new SetKeyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_setKey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			seq();
			setState(134);
			match(T__4);
			setState(135);
			setType();
			setState(136);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListElementContext extends ParserRuleContext {
		public ListKeyContext listKey() {
			return getRuleContext(ListKeyContext.class,0);
		}
		public SetOrListValueContext setOrListValue() {
			return getRuleContext(SetOrListValueContext.class,0);
		}
		public ListElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterListElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitListElement(this);
		}
	}

	public final ListElementContext listElement() throws RecognitionException {
		ListElementContext _localctx = new ListElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			listKey();
			setState(139);
			match(T__0);
			setState(140);
			setOrListValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListKeyContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public ListTypeContext listType() {
			return getRuleContext(ListTypeContext.class,0);
		}
		public ListKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterListKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitListKey(this);
		}
	}

	public final ListKeyContext listKey() throws RecognitionException {
		ListKeyContext _localctx = new ListKeyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listKey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			seq();
			setState(143);
			match(T__4);
			setState(144);
			listType();
			setState(145);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicElementContext extends ParserRuleContext {
		public BasicKeyContext basicKey() {
			return getRuleContext(BasicKeyContext.class,0);
		}
		public BasicValueContext basicValue() {
			return getRuleContext(BasicValueContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public BasicElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterBasicElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitBasicElement(this);
		}
	}

	public final BasicElementContext basicElement() throws RecognitionException {
		BasicElementContext _localctx = new BasicElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_basicElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			basicKey();
			setState(148);
			match(T__0);
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case StringValue:
			case CharValue:
			case BoolValue:
			case NumberValue:
			case DoubleValue:
				{
				setState(149);
				basicValue();
				}
				break;
			case T__1:
				{
				setState(150);
				body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicKeyContext extends ParserRuleContext {
		public SeqContext seq() {
			return getRuleContext(SeqContext.class,0);
		}
		public BasicTypeContext basicType() {
			return getRuleContext(BasicTypeContext.class,0);
		}
		public BasicKeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicKey; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterBasicKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitBasicKey(this);
		}
	}

	public final BasicKeyContext basicKey() throws RecognitionException {
		BasicKeyContext _localctx = new BasicKeyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_basicKey);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			seq();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(154);
				basicType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicTypeContext extends ParserRuleContext {
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public ByteTypeContext byteType() {
			return getRuleContext(ByteTypeContext.class,0);
		}
		public I8TypeContext i8Type() {
			return getRuleContext(I8TypeContext.class,0);
		}
		public I16TypeContext i16Type() {
			return getRuleContext(I16TypeContext.class,0);
		}
		public I32TypeContext i32Type() {
			return getRuleContext(I32TypeContext.class,0);
		}
		public I64TypeContext i64Type() {
			return getRuleContext(I64TypeContext.class,0);
		}
		public EnumTypeContext enumType() {
			return getRuleContext(EnumTypeContext.class,0);
		}
		public DoubleTypeContext doubleType() {
			return getRuleContext(DoubleTypeContext.class,0);
		}
		public StringTypeContext stringType() {
			return getRuleContext(StringTypeContext.class,0);
		}
		public BinaryTypeContext binaryType() {
			return getRuleContext(BinaryTypeContext.class,0);
		}
		public BodyTypeContext bodyType() {
			return getRuleContext(BodyTypeContext.class,0);
		}
		public BasicTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterBasicType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitBasicType(this);
		}
	}

	public final BasicTypeContext basicType() throws RecognitionException {
		BasicTypeContext _localctx = new BasicTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_basicType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__4);
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BoolType:
				{
				setState(158);
				boolType();
				}
				break;
			case ByteType:
				{
				setState(159);
				byteType();
				}
				break;
			case I8Type:
				{
				setState(160);
				i8Type();
				}
				break;
			case I16Type:
				{
				setState(161);
				i16Type();
				}
				break;
			case I32Type:
				{
				setState(162);
				i32Type();
				}
				break;
			case I64Type:
				{
				setState(163);
				i64Type();
				}
				break;
			case EnumType:
				{
				setState(164);
				enumType();
				}
				break;
			case DoubleType:
				{
				setState(165);
				doubleType();
				}
				break;
			case StringType:
				{
				setState(166);
				stringType();
				}
				break;
			case BinaryType:
				{
				setState(167);
				binaryType();
				}
				break;
			case BodyType:
				{
				setState(168);
				bodyType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(171);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicValueContext extends ParserRuleContext {
		public BoolValueContext boolValue() {
			return getRuleContext(BoolValueContext.class,0);
		}
		public CharValueContext charValue() {
			return getRuleContext(CharValueContext.class,0);
		}
		public StringValueContext stringValue() {
			return getRuleContext(StringValueContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public DoubleValueContext doubleValue() {
			return getRuleContext(DoubleValueContext.class,0);
		}
		public BasicValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterBasicValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitBasicValue(this);
		}
	}

	public final BasicValueContext basicValue() throws RecognitionException {
		BasicValueContext _localctx = new BasicValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_basicValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BoolValue:
				{
				setState(173);
				boolValue();
				}
				break;
			case CharValue:
				{
				setState(174);
				charValue();
				}
				break;
			case StringValue:
				{
				setState(175);
				stringValue();
				}
				break;
			case NumberValue:
				{
				setState(176);
				numberValue();
				}
				break;
			case DoubleValue:
				{
				setState(177);
				doubleValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharValueContext extends ParserRuleContext {
		public TerminalNode CharValue() { return getToken(ThriftParser.CharValue, 0); }
		public CharValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).enterCharValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ThriftListener ) ((ThriftListener)listener).exitCharValue(this);
		}
	}

	public final CharValueContext charValue() throws RecognitionException {
		CharValueContext _localctx = new CharValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_charValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(CharValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
